--- a/lit.cfg
+++ b/lit.cfg
@@ -12,7 +12,7 @@ config.test_format = lit.formats.ShTest()
 
 # A list of file extensions to treat as test files. This is overriden
 # by individual lit.local.cfg files in the test subdirectories.
-config.suffixes = ['.ll', '.c']
+config.suffixes = ['.ll', '.mir', '.c', '.cpp']
 
 # A list of directories to exclude from the testsuite. The 'Inputs'
 # subdirectories contain auxiliary inputs for various tests in their parent
